<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="textView">My NanoDegree Apps!</string>


    <string name="spotify">spotify streamer</string>
    <string name="bulid">build it bigger</string>
    <string name="library">library app</string>
    <string name="xyz">xyz reader</string>
    <string name="capstone">capstone: my own app</string>
    <string name="score">scores app</string>


</resources>
